# Nephesh

./: .gitignore  140039082_FabioMarques  CMakeLists.txt  Makefile  Nephesh  README.md  Resize.py
assets/map/: collisionMap.txt  tileMap1.txt
assets/map/1/: collisionMap.txt  terrainMap.txt
assets/map/2/: collisionMap.txt  terrainMap.txt
assets/map/3/: collisionMap.txt  terrainMap.txt
assets/map/4/: collisionMap.txt  terrainMap.txt
assets/map/5/: collisionMap.txt  terrainMap.txt
assets/map/6/: collisionMap.txt  terrainMap.txt
assets/map/8/: collisionMap.txt  terrainMap.txt
assets/map/9/: collisionMap.txt  terrainMap.txt
assets/npcs/: criatura_magica1.txt  criatura_magica2.txt  menino.txt  npcTest.txt  npcTest2.txt  religiosa.txt  religioso.txt  rose.txt
assets/tests/map/: collisionMap.txt
game/assets/map/: collisionMap.txt  terrainMap.txt  tileMap1.txt
game/assets/map/1/: collisionMap.txt  terrainMap.txt
game/assets/map/2/: collisionMap.txt  terrainMap.txt
game/assets/map/3/: collisionMap.txt  terrainMap.txt
game/assets/map/4/: collisionMap.txt  terrainMap.txt
game/assets/map/5/: collisionMap.txt  terrainMap.txt
game/assets/map/8/: collisionMap.txt  terrainMap.txt
game/assets/map/9/: collisionMap.txt  terrainMap.txt
game/assets/npcs/: criatura_magica1.txt  criatura_magica2.txt
game/include/: CameraShaker.cpp  CameraShaker.h  Charge.h  Collidable.h  CollisionMap.h  FadeEffect.h  GameData.h  GameObject.h  IntervalTimer.h  LineSegment.h  MeleeAttack.h  Music.h  Resources.h  Sound.h  TerrainMap.h  Text.h  TitleState.h
game/src/: Bar.cpp  BeamSkill.cpp  Boss.cpp  BossMeleeAttack.cpp  Camera.cpp  CameraFollower.cpp  Charge.cpp  FadeEffect.cpp  FallingRock.cpp  GameObject.cpp  InputManager.cpp  Log.cpp  Player.cpp  Resources.cpp  RollingStones.cpp  Sound.cpp  Sprite.cpp  TextBox.cpp  TileMap.cpp  Timer.cpp  TitleState.cpp  WorldState.cpp
include/: Bar.h  BeamSkill.h  Boss.h  BossMeleeAttack.h  Camera.h  CameraFollower.h  CameraShaker.cpp  CameraShaker.h  Cast.h  Collidable.h  Collider.h  Collision.h  CollisionMap.h  Component.h  Debug.h  DecentMusic.h  DecentTimer.cpp  DecentTimer.h  FallingRock.h  Game.h  GameData.h  GameObject.h  InputManager.h  Intersection.h  LineSegment.h  Log.h  Map.h  MeleeAtack.h  MeleeAttack.h  Music.h  Npc.h  Player.h  Rect.h  RollingRocks.h  RollingStones.h  Sound.h  Sprite.h  State.h  Text.h  TextBox.h  (+7 more)
src/: Bar.cpp  BeamSkill.cpp  Boss.cpp  BossMeleeAttack.cpp  Camera.cpp  CameraFollower.cpp  CameraShaker.cpp  Cast.cpp  Charge.cpp  Collidable.cpp  Collider.cpp  CollisionMap.cpp  Component.cpp  Debug.cpp  DecentMusic.cpp  FadeEffect.cpp  FallingRock.cpp  Game.cpp  GameData.cpp  GameObject.cpp  Intersection.cpp  IntervalTimer.cpp  LineSegment.cpp  Log.cpp  Main.cpp  Map.cpp  MeleeAtack.cpp  MeleeAttack.cpp  Music.cpp  Npc.cpp  Player.cpp  Rect.cpp  Resources.cpp  RollingRocks.cpp  RollingStones.cpp  Sound.cpp  Sprite.cpp  State.cpp  TerrainMap.cpp  Text.cpp  (+8 more)
tests/: PenguinBody.cpp  PenguinBody.h  PenguinCannon.cpp  PenguinCannon.h  StageState.cpp  StageState.h
